--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=login
+server.port=8081
+spring.data.mongodb.uri=mongodb://localhost:27017/login
+spring.data.mongodb.database=login
